--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
+    "react-redux": "^5.0.3",
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "thunk": "0.0.1",
     "url-loader": "^0.5.7",
     "weather-icons": "git+https://github.com/erikflowers/weather-icons.git",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
